// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton 1`] = `
<div
  className="box itemsCenter marginLeftN1 marginRightN1 xsDisplayFlex"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
      >
        <input
          checked={false}
          className="input sizeMd InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
      >
        Name
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioButton checked 1`] = `
<div
  className="box itemsCenter marginLeftN1 marginRightN1 xsDisplayFlex"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled BorderDarkGray BorderCheckedMd sizeMd RadioButton"
      >
        <input
          checked={true}
          className="input sizeMd InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioButton disabled 1`] = `
<div
  className="box itemsCenter marginLeftN1 marginRightN1 xsDisplayFlex"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgDisabled Border BorderDisabled sizeMd RadioButton"
      >
        <input
          checked={false}
          className="input sizeMd"
          disabled={true}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="Text fontSize3 gray alignLeft breakWord fontWeightNormal"
      >
        Name
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioButton disabled small 1`] = `
<div
  className="box itemsCenter marginLeftN1 marginRightN1 xsDisplayFlex"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgDisabled Border BorderDisabled sizeSm RadioButton"
      >
        <input
          checked={false}
          className="input sizeSm"
          disabled={true}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="Text fontSize2 gray alignLeft breakWord fontWeightNormal"
      >
        Name
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioButton small 1`] = `
<div
  className="box itemsCenter marginLeftN1 marginRightN1 xsDisplayFlex"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeSm RadioButton"
      >
        <input
          checked={false}
          className="input sizeSm InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal"
      >
        Name
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioButton without label 1`] = `
<div
  className="box itemsCenter marginLeftN1 marginRightN1 xsDisplayFlex"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
      >
        <input
          checked={false}
          className="input sizeMd InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
</div>
`;
